blog/k8s/blog_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
spec:
  selector:
    app: blog
  ports:
    - port: 3000
      #used by other pods
      targetPort: 8080
      protocol: TCP
      nodePort: 31516 # used to access from the outside
  type: LoadBalancer
