blog/k8s/blog_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blog-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /purple_blog(/|$)(.*)
            backend:
              serviceName: blog-service
              servicePort: 8080
